# MyGameStudio

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.ps1
MyGameStudio/: AsciiDrawer.cpp  AsciiDrawer.h  Asset.h  AssetDatabase.cpp  AssetDatabase.h  AssetImportationManager.cpp  AssetImportationManager.h  AssetPipeline.cpp  AssetPipeline.h  AssetRuntimeManager.cpp  AssetRuntimeManager.h  AssetTableCols.csv  Assets.cpp  Assets.db  Assets.h  BaseManager.h  BaseRuntimeManager.cpp  BaseRuntimeManager.h  CMakeLists.txt  CallbackData.h  Command.cpp  Command.h  CommandFactory.cpp  CommandFactory.h  ConfigManager.cpp  ConfigManager.h  ConfigReader.cpp  ConfigReader.h  ConsoleManager.cpp  ConsoleManager.h  CsvParser.cpp  CsvParser.h  DataStream.h  DdsHeader.h  EngineCoreManager.cpp  EngineCoreManager.h  Enums.h  Err.h  EventDispatcher.cpp  EventDispatcher.h  (+57 more)
MyGameStudio/assets/: Enemy.cpp  cube.glb  cube.glb.bak  cube2.glb  cube2.glb.bak  cubeBlender.glb  test.dds  test.mesh  test.raw  test2.mesh  test2.raw  test3.dds  test4.dds  testResult.glb  testResult2.glb  testTest.glb  testTest.glb.bak
MyGameStudio/binaries/: DebuggerShell.cpp
MyGameStudio/binaries/game/: CMakeLists.txt  CMakeTemplate.txt  Enemy.cpp  MyCuteFunction.cpp  World.cpp  World.h  main.cpp
MyGameStudio/shaders/: BillboardShader.frag  BillboardShader.vert  MyShader.frag  MyShader.vert  RegularShader.frag  RegularShader.vert
PublicEngineApi/: AnimationManager.cpp  AnimationManager.h  Asset.h  AssetDatabase.cpp  AssetDatabase.h  AssetRuntimeManager.cpp  AssetRuntimeManager.h  BillboardData.h  BillboardDrawer.cpp  BillboardDrawer.h  BillboardRenderQuery.h  BillboardRenderRequest.h  CallbackData.h  Camera.cpp  Camera.h  CameraFactory.cpp  CameraFactory.h  CameraInstance.cpp  CameraInstance.h  CameraManager.cpp  CameraManager.h  Color.cpp  Color.h  CoordinateGizmo.cpp  CoordinateGizmo.h  Counter.h  DIEventLayer.cpp  DIEventLayer.h  DILayer.cpp  DILayer.h  DILayerMapping.h  DataReader.h  Debug.cpp  Debug.h  DirectionalLight.cpp  DirectionalLight.h  Drawer.cpp  Drawer.h  DrawingCache.cpp  DrawingCache.h  (+119 more)
